--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PUT YOUR NAME HERE</title>
+		<title>Alex Manofu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,7 +54,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 1</a></p>
+								<p>DESCRIBE PROJECT<br><a href="https://drive.google.com/drive/folders/13FdhfetF_BCdFRU0cK5Vj8Qd0RhYvvgq?usp=sharing">HR Compensation Dashboard</a></p>
 								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 2</a></p>
 								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 3</a></p>
 							</article>
@@ -63,7 +63,13 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>PUT INFO ABOUT YOU HERE</p>
+								<p>Hello! My name is Alex Manofu and I am a data analyst located in Philadelphia, PA. I am proficient in Excel, Python, SQL, and Tableau and am able to use these tools to wrangle data in order to obtain insightful and useful observations. 
+								I am also well versed in effectively communicating these findings via visually appealing and coherent visualizations. </p>
+								<p>Having a bachelor's degree in mechanical engineering and experience in coordinating supply chain systems, I have gained a unique set of skills that may be applicable to a wide variety of situations. 
+								Most importantly, I believe these very different skill sets display my ability to learn and approach an unfamiliar situation and quickly asses a problem and develop a solution.
+								This quality has been apparent in my pursuit of becoming an effective data analyst. I've completed several python certifications on basic programming, data structures, and web services.
+								I've built upon these certifications by diving deeper into statistical and data analytics via the Thinkful Data Analysis Program. This program has helped me solidify my ability to approach a dataset and use Excel, SQL, Python, and Tableau to give that data a direction and a voice.
+								I am hoping to secure a data analyst position in a captivating field which will encourage the development of my analytical abilites. </p>
 							</article>
 
 						<!-- Contact -->
@@ -72,9 +78,9 @@
 								
 								<ul class="icons">
 									
-									<li><a href="LINKEDIN URL HERE" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="GITHUB URL HERE" class="icon fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="TABLEAU URL HERE" class="icon fa-plus"><span class="label">Tableau</span></a></li>
+									<li><a href="https://www.linkedin.com/in/alexandra-manofu/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/alexmanofu" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://public.tableau.com/profile/alex3344#!/" class="icon fa-plus"><span class="label">Tableau</span></a></li>
 								</ul>
 							</article>
 
