--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>YOUR NAME HERE</h1>
+								<h1>Alex Manofu</h1>
 								<p>Welcome to my portfolio!</p>
 							</div>
 						</div>
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>INTRO ABOUT WHAT YOU HAVE DONE IN DATA ANALYTICS. Check out my <a href="#work">work</a>.</p>
+								<p>Through my coursework in the Thinkful Data Analytics Program, I have been able to use Excel, Python, SQL, and Tableau to create interesting and coherent data stories. Check out my <a href="#work">work</a>.</p>
 							
 							</article>
 
@@ -54,9 +54,10 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>DESCRIBE PROJECT<br><a href="https://drive.google.com/drive/folders/13FdhfetF_BCdFRU0cK5Vj8Qd0RhYvvgq?usp=sharing">HR Compensation Dashboard</a></p>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 2</a></p>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 3</a></p>
+								<p>Built 3 models to develop potential starategies to increase the profit of a the Lariat Rental Car Company. Deliverable includes an interactive dashboard and a slide deck presentation.<br><a href="https://drive.google.com/drive/folders/1k1HvK-IR5YioEhrl3eBjVZsPt__1J_Iw?usp=sharing">Lariat Rental Car Inventory Model</a></p>
+								<p>Analyzed how certain housing features affected the sale price of a house. Deliverable includes statistical analysis on the affect 3 specific features have on sale prices and a slide deck presentation.<br><a href="https://drive.google.com/drive/folders/1UB_anOX95IO8ceuC3ekRg2QkK_-SIo5I?usp=sharing">Which Housing Features Drive Sale Prices</a></p>
+								<p>Built a web scraper that can parse through multiple pages and return artice titles and summaries.<br><a href="https://drive.google.com/drive/folders/1QafW2uRkQO-WmOZFdVvdKf5yKEZiW4ft?usp=sharing">Space.com Web Scraper</a></p>
+								<p>Created an interactive Excel dashboard for a hypothetical company that outlines the compensation and revenue generation of each employee and account title.<br><a href="https://drive.google.com/drive/folders/13FdhfetF_BCdFRU0cK5Vj8Qd0RhYvvgq?usp=sharing">HR Compensation Tool</a></p>
 							</article>
 
 						<!-- About -->
